--- a/1stExample/new Video Tutorial/WeatherWizard/Podfile
+++ b/1stExample/new Video Tutorial/WeatherWizard/Podfile
@@ -7,11 +7,13 @@ target 'WeatherWizard' do
 
   # Pods for WeatherWizard
     pod 'Alamofire', '~> 4.0'
+    pod 'SwiftLint'
 
   target 'WeatherWizardTests' do
     inherit! :search_paths
     # Pods for testing
     pod 'Alamofire', '~> 4.0'
+    pod 'SwiftLint'
   end
 
 end
