--- a/FlowerForever/.swiftlint.yml
+++ b/FlowerForever/.swiftlint.yml
@@ -1,3 +1,5 @@
+disabled_rules: # rule identifiers to exclude from running
+  - multiple_closures_with_trailing_closure
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
